src/main/java/com/github/nginxparser/antlr/NginxParser.java
// Generated from /Users/zhaojianqiang/github/nginx-java-parser-dependabot-maven-junit-junit-4.13.1/src/main/resources/grammar/Nginx.g4 by ANTLR 4.12.0

package com.github.nginxparser.antlr;

import com.github.nginxparser.*;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.atn.ATN;
import org.antlr.v4.runtime.atn.ATNDeserializer;
import org.antlr.v4.runtime.atn.ParserATNSimulator;
import org.antlr.v4.runtime.atn.PredictionContextCache;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.tree.ParseTreeListener;
import org.antlr.v4.runtime.tree.ParseTreeVisitor;
import org.antlr.v4.runtime.tree.TerminalNode;

import java.util.ArrayList;
import java.util.List;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class NginxParser extends Parser {
    static {
        RuntimeMetaData.checkVersion("4.12.0", RuntimeMetaData.VERSION);
    }

    protected static final DFA[] _decisionToDFA;
    protected static final PredictionContextCache _sharedContextCache =
        new PredictionContextCache();
    public static final int
        T__0 = 1, T__1 = 2, T__2 = 3, T__3 = 4, T__4 = 5, T__5 = 6, T__6 = 7, T__7 = 8, T__8 = 9,
        T__9 = 10, T__10 = 11, T__11 = 12, T__12 = 13, T__13 = 14, Value = 15, STR_EXT = 16,
        Comment = 17, REGEXP_PREFIXED = 18, QUOTED_STRING = 19, SINGLE_QUOTED = 20, WS = 21;
    public static final int
        RULE_config = 0, RULE_statement = 1, RULE_genericStatement = 2, RULE_regexHeaderStatement = 3,
        RULE_block = 4, RULE_genericBlockHeader = 5, RULE_if_statement = 6, RULE_if_body = 7,
        RULE_regexp = 8, RULE_locationBlockHeader = 9, RULE_rewriteStatement = 10;

    private static String[] makeRuleNames() {
        return new String[]{
            "config", "statement", "genericStatement", "regexHeaderStatement", "block",
            "genericBlockHeader", "if_statement", "if_body", "regexp", "locationBlockHeader",
            "rewriteStatement"
        };
    }

    public static final String[] ruleNames = makeRuleNames();

    private static String[] makeLiteralNames() {
        return new String[]{
            null, "';'", "'{'", "'}'", "'if'", "'('", "')'", "'\\.'", "'^'", "'location'",
            "'rewrite'", "'last'", "'break'", "'redirect'", "'permanent'"
        };
    }

    private static final String[] _LITERAL_NAMES = makeLiteralNames();

    private static String[] makeSymbolicNames() {
        return new String[]{
            null, null, null, null, null, null, null, null, null, null, null, null,
            null, null, null, "Value", "STR_EXT", "Comment", "REGEXP_PREFIXED", "QUOTED_STRING",
            "SINGLE_QUOTED", "WS"
        };
    }

    private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
    public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

    /**
     * @deprecated Use {@link #VOCABULARY} instead.
     */
    @Deprecated
    public static final String[] tokenNames;

    static {
        tokenNames = new String[_SYMBOLIC_NAMES.length];
        for (int i = 0; i < tokenNames.length; i++) {
            tokenNames[i] = VOCABULARY.getLiteralName(i);
            if (tokenNames[i] == null) {
                tokenNames[i] = VOCABULARY.getSymbolicName(i);
            }

            if (tokenNames[i] == null) {
                tokenNames[i] = "<INVALID>";
            }
        }
    }

    @Override
    @Deprecated
    public String[] getTokenNames() {
        return tokenNames;
    }

    @Override

    public Vocabulary getVocabulary() {
        return VOCABULARY;
    }

    @Override
    public String getGrammarFileName() {
        return "Nginx.g4";
    }

    @Override
    public String[] getRuleNames() {
        return ruleNames;
    }

    @Override
    public String getSerializedATN() {
        return _serializedATN;
    }

    @Override
    public ATN getATN() {
        return _ATN;
    }

    public NginxParser(TokenStream input) {
        super(input);
        _interp = new ParserATNSimulator(this, _ATN, _decisionToDFA, _sharedContextCache);
    }

    @SuppressWarnings("CheckReturnValue")
    public static class ConfigContext extends ParserRuleContext {
        public NgxConfig ret;
        public StatementContext statement;
        public BlockContext block;
        public Token Comment;

        public List<StatementContext> statement() {
            return getRuleContexts(StatementContext.class);
        }

        public StatementContext statement(int i) {
            return getRuleContext(StatementContext.class, i);
        }

        public List<BlockContext> block() {
            return getRuleContexts(BlockContext.class);
        }

        public BlockContext block(int i) {
            return getRuleContext(BlockContext.class, i);
        }

        public List<TerminalNode> Comment() {
            return getTokens(NginxParser.Comment);
        }

        public TerminalNode Comment(int i) {
            return getToken(NginxParser.Comment, i);
        }

        public ConfigContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_config;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof NginxListener) ((NginxListener) listener).enterConfig(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof NginxListener) ((NginxListener) listener).exitConfig(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof NginxVisitor) return ((NginxVisitor<? extends T>) visitor).visitConfig(this);
            else return visitor.visitChildren(this);
        }
    }

    public final ConfigContext config() throws RecognitionException {
        ConfigContext _localctx = new ConfigContext(_ctx, getState());
        enterRule(_localctx, 0, RULE_config);
        ((ConfigContext) _localctx).ret = new NgxConfig();
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(30);
                _errHandler.sync(this);
                _la = _input.LA(1);
                do {
                    {
                        setState(30);
                        _errHandler.sync(this);
                        switch (getInterpreter().adaptivePredict(_input, 0, _ctx)) {
                            case 1: {
                                setState(22);
                                ((ConfigContext) _localctx).statement = statement();
                                _localctx.ret.addEntry(((ConfigContext) _localctx).statement.ret);
                            }
                            break;
                            case 2: {
                                setState(25);
                                ((ConfigContext) _localctx).block = block();
                                _localctx.ret.addEntry(((ConfigContext) _localctx).block.ret);
                            }
                            break;
                            case 3: {
                                setState(28);
                                ((ConfigContext) _localctx).Comment = match(Comment);
                                _localctx.ret.addEntry(new NgxComment((((ConfigContext) _localctx).Comment != null ? ((ConfigContext) _localctx).Comment.getText() : null)));
                            }
                            break;
                        }
                    }
                    setState(32);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                } while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 427520L) != 0));
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    @SuppressWarnings("CheckReturnValue")
    public static class StatementContext extends ParserRuleContext {
        public NgxParam ret;
        public RewriteStatementContext rewriteStatement;
        public GenericStatementContext genericStatement;
        public RegexHeaderStatementContext regexHeaderStatement;

        public RewriteStatementContext rewriteStatement() {
            return getRuleContext(RewriteStatementContext.class, 0);
        }

        public GenericStatementContext genericStatement() {
            return getRuleContext(GenericStatementContext.class, 0);
        }

        public RegexHeaderStatementContext regexHeaderStatement() {
            return getRuleContext(RegexHeaderStatementContext.class, 0);
        }

        public StatementContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_statement;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof NginxListener) ((NginxListener) listener).enterStatement(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof NginxListener) ((NginxListener) listener).exitStatement(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof NginxVisitor) return ((NginxVisitor<? extends T>) visitor).visitStatement(this);
            else return visitor.visitChildren(this);
        }
    }

    public final StatementContext statement() throws RecognitionException {
        StatementContext _localctx = new StatementContext(_ctx, getState());
        enterRule(_localctx, 2, RULE_statement);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(43);
                _errHandler.sync(this);
                switch (_input.LA(1)) {
                    case T__9: {
                        setState(34);
                        ((StatementContext) _localctx).rewriteStatement = rewriteStatement();
                        ((StatementContext) _localctx).ret = ((StatementContext) _localctx).rewriteStatement.ret;
                    }
                    break;
                    case Value: {
                        setState(37);
                        ((StatementContext) _localctx).genericStatement = genericStatement();
                        ((StatementContext) _localctx).ret = ((StatementContext) _localctx).genericStatement.ret;
                    }
                    break;
                    case REGEXP_PREFIXED: {
                        setState(40);
                        ((StatementContext) _localctx).regexHeaderStatement = regexHeaderStatement();
                        ((StatementContext) _localctx).ret = ((StatementContext) _localctx).regexHeaderStatement.ret;
                    }
                    break;
                    default:
                        throw new NoViableAltException(this);
                }
                setState(45);
                match(T__0);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    @SuppressWarnings("CheckReturnValue")
    public static class GenericStatementContext extends ParserRuleContext {
        public NgxParam ret;
        public Token Value;
        public RegexpContext r;

        public List<TerminalNode> Value() {
            return getTokens(NginxParser.Value);
        }

        public TerminalNode Value(int i) {
            return getToken(NginxParser.Value, i);
        }

        public List<RegexpContext> regexp() {
            return getRuleContexts(RegexpContext.class);
        }

        public RegexpContext regexp(int i) {
            return getRuleContext(RegexpContext.class, i);
        }

        public GenericStatementContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_genericStatement;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof NginxListener) ((NginxListener) listener).enterGenericStatement(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof NginxListener) ((NginxListener) listener).exitGenericStatement(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof NginxVisitor)
                return ((NginxVisitor<? extends T>) visitor).visitGenericStatement(this);
            else return visitor.visitChildren(this);
        }
    }

    public final GenericStatementContext genericStatement() throws RecognitionException {
        GenericStatementContext _localctx = new GenericStatementContext(_ctx, getState());
        enterRule(_localctx, 4, RULE_genericStatement);
        ((GenericStatementContext) _localctx).ret = new NgxParam();
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(47);
                ((GenericStatementContext) _localctx).Value = match(Value);
                _localctx.ret.addValue((((GenericStatementContext) _localctx).Value != null ? ((GenericStatementContext) _localctx).Value.getText() : null));
                setState(56);
                _errHandler.sync(this);
                _la = _input.LA(1);
                while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 33184L) != 0)) {
                    {
                        setState(54);
                        _errHandler.sync(this);
                        switch (getInterpreter().adaptivePredict(_input, 3, _ctx)) {
                            case 1: {
                                setState(49);
                                ((GenericStatementContext) _localctx).Value = match(Value);
                                _localctx.ret.addValue((((GenericStatementContext) _localctx).Value != null ? ((GenericStatementContext) _localctx).Value.getText() : null));
                            }
                            break;
                            case 2: {
                                setState(51);
                                ((GenericStatementContext) _localctx).r = regexp();
                                _localctx.ret.addValue(((GenericStatementContext) _localctx).r.ret);
                            }
                            break;
                        }
                    }
                    setState(58);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                }
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    @SuppressWarnings("CheckReturnValue")
    public static class RegexHeaderStatementContext extends ParserRuleContext {
        public NgxParam ret;
        public Token REGEXP_PREFIXED;
        public Token Value;

        public TerminalNode REGEXP_PREFIXED() {
            return getToken(NginxParser.REGEXP_PREFIXED, 0);
        }

        public TerminalNode Value() {
            return getToken(NginxParser.Value, 0);
        }

        public RegexHeaderStatementContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_regexHeaderStatement;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof NginxListener) ((NginxListener) listener).enterRegexHeaderStatement(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof NginxListener) ((NginxListener) listener).exitRegexHeaderStatement(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof NginxVisitor)
                return ((NginxVisitor<? extends T>) visitor).visitRegexHeaderStatement(this);
            else return visitor.visitChildren(this);
        }
    }

    public final RegexHeaderStatementContext regexHeaderStatement() throws RecognitionException {
        RegexHeaderStatementContext _localctx = new RegexHeaderStatementContext(_ctx, getState());
        enterRule(_localctx, 6, RULE_regexHeaderStatement);
        ((RegexHeaderStatementContext) _localctx).ret = new NgxParam();
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(59);
                ((RegexHeaderStatementContext) _localctx).REGEXP_PREFIXED = match(REGEXP_PREFIXED);
                _localctx.ret.addValue((((RegexHeaderStatementContext) _localctx).REGEXP_PREFIXED != null ? ((RegexHeaderStatementContext) _localctx).REGEXP_PREFIXED.getText() : null));
                setState(61);
                ((RegexHeaderStatementContext) _localctx).Value = match(Value);
                _localctx.ret.addValue((((RegexHeaderStatementContext) _localctx).Value != null ? ((RegexHeaderStatementContext) _localctx).Value.getText() : null));
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    @SuppressWarnings("CheckReturnValue")
    public static class BlockContext extends ParserRuleContext {
        public NgxBlock ret;
        public LocationBlockHeaderContext locationBlockHeader;
        public GenericBlockHeaderContext genericBlockHeader;
        public Token Comment;
        public StatementContext statement;
        public BlockContext b;
        public If_statementContext if_statement;

        public LocationBlockHeaderContext locationBlockHeader() {
            return getRuleContext(LocationBlockHeaderContext.class, 0);
        }

        public GenericBlockHeaderContext genericBlockHeader() {
            return getRuleContext(GenericBlockHeaderContext.class, 0);
        }

        public List<TerminalNode> Comment() {
            return getTokens(NginxParser.Comment);
        }

        public TerminalNode Comment(int i) {
            return getToken(NginxParser.Comment, i);
        }

        public List<StatementContext> statement() {
            return getRuleContexts(StatementContext.class);
        }

        public StatementContext statement(int i) {
            return getRuleContext(StatementContext.class, i);
        }

        public List<If_statementContext> if_statement() {
            return getRuleContexts(If_statementContext.class);
        }

        public If_statementContext if_statement(int i) {
            return getRuleContext(If_statementContext.class, i);
        }

        public List<BlockContext> block() {
            return getRuleContexts(BlockContext.class);
        }

        public BlockContext block(int i) {
            return getRuleContext(BlockContext.class, i);
        }

        public BlockContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_block;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof NginxListener) ((NginxListener) listener).enterBlock(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof NginxListener) ((NginxListener) listener).exitBlock(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof NginxVisitor) return ((NginxVisitor<? extends T>) visitor).visitBlock(this);
            else return visitor.visitChildren(this);
        }
    }

    public final BlockContext block() throws RecognitionException {
        BlockContext _localctx = new BlockContext(_ctx, getState());
        enterRule(_localctx, 8, RULE_block);
        ((BlockContext) _localctx).ret = new NgxBlock();
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(70);
                _errHandler.sync(this);
                switch (_input.LA(1)) {
                    case T__8: {
                        setState(64);
                        ((BlockContext) _localctx).locationBlockHeader = locationBlockHeader();
                        _localctx.ret.getTokens().addAll(((BlockContext) _localctx).locationBlockHeader.ret);
                    }
                    break;
                    case Value: {
                        setState(67);
                        ((BlockContext) _localctx).genericBlockHeader = genericBlockHeader();
                        _localctx.ret.getTokens().addAll(((BlockContext) _localctx).genericBlockHeader.ret);
                    }
                    break;
                    default:
                        throw new NoViableAltException(this);
                }
                setState(73);
                _errHandler.sync(this);
                _la = _input.LA(1);
                if (_la == Comment) {
                    {
                        setState(72);
                        ((BlockContext) _localctx).Comment = match(Comment);
                    }
                }

                setState(75);
                match(T__1);
                setState(89);
                _errHandler.sync(this);
                _la = _input.LA(1);
                while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 427536L) != 0)) {
                    {
                        setState(87);
                        _errHandler.sync(this);
                        switch (getInterpreter().adaptivePredict(_input, 7, _ctx)) {
                            case 1: {
                                setState(76);
                                ((BlockContext) _localctx).statement = statement();
                                _localctx.ret.addEntry(((BlockContext) _localctx).statement.ret);
                            }
                            break;
                            case 2: {
                                setState(79);
                                ((BlockContext) _localctx).b = block();
                                _localctx.ret.addEntry(((BlockContext) _localctx).b.ret);
                            }
                            break;
                            case 3: {
                                setState(82);
                                ((BlockContext) _localctx).if_statement = if_statement();
                                _localctx.ret.addEntry(((BlockContext) _localctx).if_statement.ret);
                            }
                            break;
                            case 4: {
                                setState(85);
                                ((BlockContext) _localctx).Comment = match(Comment);
                                _localctx.ret.addEntry(new NgxComment((((BlockContext) _localctx).Comment != null ? ((BlockContext) _localctx).Comment.getText() : null)));
                            }
                            break;
                        }
                    }
                    setState(91);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                }
                setState(92);
                match(T__2);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    @SuppressWarnings("CheckReturnValue")
    public static class GenericBlockHeaderContext extends ParserRuleContext {
        public List<NgxToken> ret;
        public Token Value;
        public RegexpContext regexp;

        public List<TerminalNode> Value() {
            return getTokens(NginxParser.Value);
        }

        public TerminalNode Value(int i) {
            return getToken(NginxParser.Value, i);
        }

        public List<RegexpContext> regexp() {
            return getRuleContexts(RegexpContext.class);
        }

        public RegexpContext regexp(int i) {
            return getRuleContext(RegexpContext.class, i);
        }

        public GenericBlockHeaderContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_genericBlockHeader;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof NginxListener) ((NginxListener) listener).enterGenericBlockHeader(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof NginxListener) ((NginxListener) listener).exitGenericBlockHeader(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof NginxVisitor)
                return ((NginxVisitor<? extends T>) visitor).visitGenericBlockHeader(this);
            else return visitor.visitChildren(this);
        }
    }

    public final GenericBlockHeaderContext genericBlockHeader() throws RecognitionException {
        GenericBlockHeaderContext _localctx = new GenericBlockHeaderContext(_ctx, getState());
        enterRule(_localctx, 10, RULE_genericBlockHeader);
        ((GenericBlockHeaderContext) _localctx).ret = new ArrayList<NgxToken>();
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(94);
                ((GenericBlockHeaderContext) _localctx).Value = match(Value);
                _localctx.ret.add(new NgxToken((((GenericBlockHeaderContext) _localctx).Value != null ? ((GenericBlockHeaderContext) _localctx).Value.getText() : null)));
                setState(103);
                _errHandler.sync(this);
                _la = _input.LA(1);
                while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 33184L) != 0)) {
                    {
                        setState(101);
                        _errHandler.sync(this);
                        switch (getInterpreter().adaptivePredict(_input, 9, _ctx)) {
                            case 1: {
                                setState(96);
                                ((GenericBlockHeaderContext) _localctx).Value = match(Value);
                                _localctx.ret.add(new NgxToken((((GenericBlockHeaderContext) _localctx).Value != null ? ((GenericBlockHeaderContext) _localctx).Value.getText() : null)));
                            }
                            break;
                            case 2: {
                                setState(98);
                                ((GenericBlockHeaderContext) _localctx).regexp = regexp();
                                _localctx.ret.add(new NgxToken(((GenericBlockHeaderContext) _localctx).regexp.ret));
                            }
                            break;
                        }
                    }
                    setState(105);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                }
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    @SuppressWarnings("CheckReturnValue")
    public static class If_statementContext extends ParserRuleContext {
        public NgxIfBlock ret;
        public Token id;
        public If_bodyContext if_body;
        public StatementContext statement;

        public If_bodyContext if_body() {
            return getRuleContext(If_bodyContext.class, 0);
        }

        public TerminalNode Comment() {
            return getToken(NginxParser.Comment, 0);
        }

        public List<StatementContext> statement() {
            return getRuleContexts(StatementContext.class);
        }

        public StatementContext statement(int i) {
            return getRuleContext(StatementContext.class, i);
        }

        public If_statementContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_if_statement;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof NginxListener) ((NginxListener) listener).enterIf_statement(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof NginxListener) ((NginxListener) listener).exitIf_statement(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof NginxVisitor) return ((NginxVisitor<? extends T>) visitor).visitIf_statement(this);
            else return visitor.visitChildren(this);
        }
    }

    public final If_statementContext if_statement() throws RecognitionException {
        If_statementContext _localctx = new If_statementContext(_ctx, getState());
        enterRule(_localctx, 12, RULE_if_statement);
        ((If_statementContext) _localctx).ret = new NgxIfBlock();
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(106);
                ((If_statementContext) _localctx).id = match(T__3);
                _localctx.ret.addValue(new NgxToken((((If_statementContext) _localctx).id != null ? ((If_statementContext) _localctx).id.getText() : null)));
                setState(108);
                ((If_statementContext) _localctx).if_body = if_body();
                _localctx.ret.getTokens().addAll(((If_statementContext) _localctx).if_body.ret);
                setState(111);
                _errHandler.sync(this);
                _la = _input.LA(1);
                if (_la == Comment) {
                    {
                        setState(110);
                        match(Comment);
                    }
                }

                setState(113);
                match(T__1);
                setState(119);
                _errHandler.sync(this);
                _la = _input.LA(1);
                while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 295936L) != 0)) {
                    {
                        {
                            setState(114);
                            ((If_statementContext) _localctx).statement = statement();
                            _localctx.ret.addEntry(((If_statementContext) _localctx).statement.ret);
                        }
                    }
                    setState(121);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                }
                setState(122);
                match(T__2);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    @SuppressWarnings("CheckReturnValue")
    public static class If_bodyContext extends ParserRuleContext {
        public List<NgxToken> ret;
        public Token id;
        public Token Value;
        public RegexpContext regexp;

        public List<TerminalNode> Value() {
            return getTokens(NginxParser.Value);
        }

        public TerminalNode Value(int i) {
            return getToken(NginxParser.Value, i);
        }

        public RegexpContext regexp() {
            return getRuleContext(RegexpContext.class, 0);
        }

        public If_bodyContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_if_body;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof NginxListener) ((NginxListener) listener).enterIf_body(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof NginxListener) ((NginxListener) listener).exitIf_body(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof NginxVisitor) return ((NginxVisitor<? extends T>) visitor).visitIf_body(this);
            else return visitor.visitChildren(this);
        }
    }
